--- a/Graph/MainWindow.xaml
+++ b/Graph/MainWindow.xaml
@@ -1,13 +1,18 @@
-﻿<Window x:Class="Graph.MainWindow"
+﻿<Window x:Class="GraphApp.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Graph"
+        xmlns:graphx="http://schemas.panthernet.ru/graphx/"
+        xmlns:local="clr-namespace:GraphApp"
         mc:Ignorable="d"
         Title="MainWindow" Height="500" Width="700">
     <Grid>
         <Button x:Name="button" Content="Calculate the path" HorizontalAlignment="Left" Margin="467,415,0,0" VerticalAlignment="Top" Width="200"/>
+
+        <graphx:ZoomControl x:Name="zoomctrl" Margin="10,10,10,83">
+            <local:GraphAreaExample x:Name="GraphArea"/>
+        </graphx:ZoomControl>
 
     </Grid>
 </Window>
